--- a/index.html
+++ b/index.html
@@ -15,35 +15,57 @@
     <link rel="stylesheet" type="text/css" href="public/style.css">
 </head>
 <body>
-<div id="app">
+<div id="app" v-cloak>
     <div class="header">
         <h1>Vue.js Poster Store</h1>
         <form class="searchbar" v-on:submit.prevent="onSubmit">
-          <input v-model="search" placeholder="Search for posters">
+          <input v-model="newSearch" placeholder="Search for posters">
           <input type="submit" value="Search" class="btn">
         </form>
     </div>
     <div class="main">
         <div class="products">
+          <div v-if="loading">
+            Loading...
+          </div>
+          <div class="seach-results" v-else>
+            Found {{results.length}} results for search term {{lastSearch}}.
+          </div>
           <div class="product" v-for="(item, index) in items">
-            <h4 class="product-title">{{item.title}}</h4>
-            <button class="add-to-cart btn" v-on:click="addItem(index)">Add to card</button>
+            <div>
+              <div class="product-image">
+                <img v-bind:src="item.link">
+              </div>
+            </div>
+            <div>
+              <h4 class="product-title">{{item.title}}</h4>
+              <p>Price: {{ item.price | currency }}</p>
+              <button class="add-to-cart btn" v-on:click="addItem(index)">Add to card</button>
+            </div>
+          </div>
+          <div id="product-list-bottom">
+            <div v-if="noMoreItems">
+              No more items.
+            </div>
           </div>
         </div>
+
         <div class="cart">
             <h2>Shopping Cart</h2>
-            <ul>
-              <li class="cart-item" v-for="(item,index) in cart">
+            <transition-group name="fade" tag="ul">
+              <li class="cart-item" v-for="(item,index) in cart" v-bind:key="item.id">
                 <div class="item-title">{{item.title}}</div>
                 <span class="item-qty">{{item.price | currency}} x {{item.qty}}</span>
                 <button class="btn" v-on:click="inc(item)">+</button>
                 <button class="btn" v-on:click="dec(item,index)">-</button>
               </li>
-            </ul>
-            <div v-if="cart.length">
-              <div>Total: {{total | currency}}</div>
-            </div>
-            <div v-else class="empty-cart">
+            </transition-group>
+            <transition name="fade">
+              <div v-if="cart.length">
+                <div>Total: {{total | currency}}</div>
+              </div>
+            </transition>
+            <div v-if="cart.length === 0" class="empty-cart">
               No items in cart.
             </div>
         </div>
@@ -54,6 +76,7 @@
 <script src="reload/reload.js"></script>
 <script type="text/javascript" src="node_modules/vue/dist/vue.js"></script>
 <script type="text/javascript" src="node_modules/vue-resource/dist/vue-resource.js"></script>
+<script type="text/javascript" src="node_modules/scrollmonitor/scrollMonitor.js"></script>
 <script type="text/javascript" src="public/script.js"></script>
 
 </body>
